--- a/HTML/iframe footer.html
+++ b/HTML/iframe footer.html
@@ -11,7 +11,7 @@
 
 <body oncontextmenu="return false;">
     <footer>
-        <div class="leftf">&copy; Copyright 2023 Firayalal Public School - All Rights Reserved</div>
+        <div class="leftf">&copy; Created for school exibition</div>
         <div class="rightf"> Designed & Developed : Disan Alam</div>
     </footer>
 </body>
